tests/should_fail/logic_alias/alias_defined_in_different_impls.stderr
error: In an `impl T for ...` context, method can only be aliased by logic method in `T`. (program method defined for trait T2, logic alias defined in trait T1)
  --> alias_defined_in_different_impls.rs:22:5
   |
22 |     #[logic_alias(Self::is_zero_log(x@))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> alias_defined_in_different_impls.rs:23:5
   |
23 |     fn is_zero(x: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> alias_defined_in_different_impls.rs:9:5
   |
 9 |     fn is_zero_log(x: Int) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

